progress on memory allocation examples

--- a/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2-put-together/02-3-get.md
+++ b/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2-put-together/02-3-get.md
@@ -21,7 +21,7 @@ Here is the prompt and code for the `size` function. You will need similar code 
  * @return unsigned int the size of the dynamic array
  */
 template<typename T>
-unsigned int size(dynamic_array<T> *array)
+unsigned int size(const dynamic_array<T> *array)
 {
   if (array)
     return array->size;
@@ -61,6 +61,7 @@ The code inside `get` should be quite small, and for me Copilot did ok with this
 
 Notice how you have to know what you are doing. Here you want to make sure that:
 
+- The dynamic array is passed as a `const` pointer, as we do not change the array.
 - It checks for out of bounds. If you are using an `unsigned int` then you only need to guard against `index >= array->size`.
 - When index is not value, make sure it returns the default value from the parameter
 - Otherwise, it can result the element from `array->data[index]`.
