add pages for each os install

--- a/src/content/docs/book/part-0-getting-started/2-computer-use/1-concepts/10-windows.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/1-concepts/10-windows.mdx
@@ -2,7 +2,7 @@
 title: Using X Windows
 sidebar:
     attrs:
-      class: multitool
+      class: pi
 banner:
   content: |
     This page is for the Multitool!
