--- a/src/content/docs/credits.mdx
+++ b/src/content/docs/credits.mdx
@@ -13,11 +13,8 @@ template: splash
 ---
 import  Contributors  from '../../components/contributors.astro';
 
-<div style="margin: auto; text-align: center; max-width: 600px">
-  The **Programmer's Field Guide** is your trusty companion as you embark on your journey to understand the world of programming. Brought to you by **Andrew Cain, Charlotte Pierce, Jake Renzella, Peter**, and **Laura Tubino**...
-
+<div style="margin: auto; text-align: center; max-width: 600px; font-family: 'antique-olive';">
+  The **Programmer's Field Guide** is your trusty companion as you embark on your journey to understand the world of programming. Brought to you by **Andrew Cain, Charlotte Pierce, Jake Renzella, Peter**, and **Laura Tubino**.
 </div>
-<Contributors>
-</Contributors>
 
-<p style="text-align: center">Artwork by ..., and a whole bunch of other people who contributed to the project.</p>
+<Contributors/>
